# rdmo-plugins-somef

./: CITATION.cff  README.md  pyproject.toml
rdmo_plugins_somef/imports/: helpers.py  somef-smp.toml  somef.py  test-somef.json  utils.py
rdmo_plugins_somef/imports/scripts/: create_somef_env.sh  somef_describe.sh
rdmo_plugins_somef/templates/plugins/somef/: somef_import_form.html
rdmo_plugins_somef/templates/projects/: project_detail_sidebar.html
rdmo_plugins_somef/tests/: test.json
